Add basic styling

--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,111 @@
     box-sizing: border-box;
 }
 
+:root{
+    --leftmargin: 50px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+input {
+    width: 250px;
+    height: 30px;
+}
+
+p {
+    margin-left: var(--leftmargin);
+    width: 40vw;
+}
+
+form {
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-top: 50px;
+}
+
+.form-row {
+    display: flex;
+    gap: 100px;
+}
+
+legend {
+    position: relative;
+    font-size: 28px;
+    top: 20px;
+}
+
+fieldset {
+    background-color: aliceblue;
+    padding-left: 50px;
+}
+
+.container {
+    display: flex;
+}
+
+.left {
+    display: flex;
+    width: 35vw;
+    height: 100vh;
+}
+
+.img-container {
+    width: 35vw;
+    height: 100vh;
+}
+
+.right {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    gap: 3rem;
+    width: 65vw;
+    height: 100vh;
+    background-color: whitesmoke;
+}
+
+.signup-text {
+    font-size: 26px;
+    font-weight: bold;
+}
+
+#emphasis {
+    font-style: italic;
+}
+
+.form-details {
+    width: 65vw;
+    height: 33vh;
+    background-color: white;
+    border: 0;
+}
+
+.group-labels {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.submit-btn {
+    margin-left: var(--leftmargin);
+    padding: 15px 75px 15px 75px;
+    width: fit-content;
+    height: fit-content;
+    color: white;
+    background-color: #4c6dd9;
+    border: 0;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
