--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Odin";
+    src: url("../resources/fonts/Norse-Bold.otf") format("opentype");
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -16,11 +21,18 @@ img {
 input {
     width: 250px;
     height: 30px;
+    border: 1px solid #E5E7EB;
 }
 
-p {
+.right-p {
     margin-left: var(--leftmargin);
     width: 40vw;
+}
+
+.left-p {
+    font-family: "Odin";
+    font-size: 108px;
+    color: white;
 }
 
 form {
@@ -54,13 +66,42 @@ fieldset {
 
 .left {
     display: flex;
+    flex-direction: column;
     width: 35vw;
     height: 100vh;
+    background-image: url("../resources/img/ian-schneider-0qpPV5nrhwo-unsplash.jpg");
+    background-size: cover;
+    justify-content: space-between;
 }
 
-.img-container {
-    width: 35vw;
-    height: 100vh;
+.img-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 400px;
+    background-color: rgba(0,0,0, 0.4);
+    width: 100%;
+    height: 15%;
+}
+
+.credit-footer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding: 5px 0;
+}
+
+.credit {
+    color: white;
+}
+
+.credit a {
+    color: white;
+}
+
+#header {
+    width: 15%;
+    height: auto;
 }
 
 .right {
@@ -102,7 +143,7 @@ fieldset {
 
 .submit-btn {
     margin-left: var(--leftmargin);
-    padding: 15px 75px 15px 75px;
+    padding: 15px 75px;
     width: fit-content;
     height: fit-content;
     color: white;
