--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
     src: url("../resources/fonts/Norse-Bold.otf") format("opentype");
 }
 
-* {
+*,
+*::before,
+*::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -21,22 +23,33 @@ img {
 input {
     width: 250px;
     height: 30px;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
     border: 1px solid #E5E7EB;
+}
+
+input:focus {
+    border: 2px solid skyblue;
+}
+
+.invalid {
+    border: 2px solid red;
 }
 
 .right-p {
     margin-left: var(--leftmargin);
-    width: 40vw;
+    width: auto;
 }
 
 .left-p {
     font-family: "Odin";
-    font-size: 108px;
+    font-size: 90px;
     color: white;
 }
 
 form {
-    font-size: 16px;
+    font-size: 14px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -51,13 +64,8 @@ form {
 
 legend {
     position: relative;
-    font-size: 28px;
-    top: 20px;
-}
-
-fieldset {
-    background-color: aliceblue;
-    padding-left: 50px;
+    font-size: 24px;
+    top: 40px;
 }
 
 .container {
@@ -67,7 +75,7 @@ fieldset {
 .left {
     display: flex;
     flex-direction: column;
-    width: 35vw;
+    width: auto;
     height: 100vh;
     background-image: url("../resources/img/ian-schneider-0qpPV5nrhwo-unsplash.jpg");
     background-size: cover;
@@ -100,7 +108,7 @@ fieldset {
 }
 
 #header {
-    width: 15%;
+    width: 12%;
     height: auto;
 }
 
@@ -108,15 +116,16 @@ fieldset {
     display: flex;
     flex-direction: column;
     justify-content:center;
+    font-family:Arial, Helvetica, sans-serif;
     gap: 3rem;
-    width: 65vw;
+    width: auto;
     height: 100vh;
     background-color: whitesmoke;
 }
 
 .signup-text {
-    font-size: 26px;
-    font-weight: bold;
+    font-size: 24px;
+    font-weight: 600;
 }
 
 #emphasis {
@@ -124,10 +133,18 @@ fieldset {
 }
 
 .form-details {
-    width: 65vw;
-    height: 33vh;
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+    height: auto;
+    font-weight: bold;
+    color: grey;
     background-color: white;
     border: 0;
+    padding-left: var(--leftmargin);
+    padding-top: 15px;
+    padding-bottom: 25px;
+    box-shadow: 1px 1px 15px lightgrey;
 }
 
 .group-labels {
@@ -141,9 +158,15 @@ fieldset {
     gap: 25px;
 }
 
+#login {
+    color:#4c6dd9;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
 .submit-btn {
     margin-left: var(--leftmargin);
-    padding: 15px 75px;
+    padding: 15px 50px;
     width: fit-content;
     height: fit-content;
     color: white;
@@ -152,4 +175,5 @@ fieldset {
     border-radius: 10px;
     font-size: 18px;
     font-weight: bold;
+    box-shadow: 2px 4px 5px grey;
 }
