--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ legend {
 .left {
     display: flex;
     flex-direction: column;
-    width: auto;
+    width: 35vw;
     height: 100vh;
     background-image: url("../resources/img/ian-schneider-0qpPV5nrhwo-unsplash.jpg");
     background-size: cover;
@@ -118,7 +118,7 @@ legend {
     justify-content:center;
     font-family:Arial, Helvetica, sans-serif;
     gap: 3rem;
-    width: auto;
+    width: 100vw;
     height: 100vh;
     background-color: whitesmoke;
 }
@@ -126,6 +126,7 @@ legend {
 .signup-text {
     font-size: 24px;
     font-weight: 600;
+    width: 50vw;
 }
 
 #emphasis {
@@ -176,4 +177,13 @@ legend {
     font-size: 18px;
     font-weight: bold;
     box-shadow: 2px 4px 5px grey;
+}
+
+.submit-btn:hover {
+    background-color: blue;
+    cursor: pointer;
+}
+
+.submit-btn:active {
+    scale: 0.98;
 }
